rubocop/examples/good/Style_SpaceAfterNot.rb
# No space after !.

# good
!something
