rubocop/examples/bad/Style_SpaceAfterNot.rb
# No space after !.

# bad
! something
